--- a/index.css
+++ b/index.css
@@ -178,6 +178,7 @@ body{
 
   
 }
+#textToCopy {             padding: 10px;             font-size: 16px;             width: 300px;         }         #copyButton {             padding: 10px 20px;             font-size: 16px;             margin-left: 10px;             cursor: pointer;         }
 .buy{
   background-color: #1E6A6E;
   width: fit-content;
