--- a/index.css
+++ b/index.css
@@ -974,3 +974,11 @@ section {
   opacity: 0;
   transition: opacity 0.8s ease-out;
 } */
+#contractAddress{
+  width: 80%;
+  background-color: white;
+  color: black;
+  padding: 2%;
+  margin: auto
+  border-radius: 10px;
+}
