--- a/index.css
+++ b/index.css
@@ -979,6 +979,6 @@ section {
   background-color: white;
   color: black;
   padding: 2%;
-  margin: auto
+  margin: 3% auto;
   border-radius: 10px;
 }
